# Fifty-Two-Card-Pickup

./: .gitignore  52_Card_Pickup_Roadmap.md  README.md  app.py  benchmarks.py  card_pickup.py  observability.py  plugins.py  pyproject.toml  requirements.txt  visualize.py
.github/workflows/: ci.yml
card_pickup/: __init__.py  __main__.py  _core.py
components/card_grid/: __init__.py
components/card_grid/frontend/: index.html
docs/: add_your_own_agent.md  blog_post.md  future_directions.md  tutorial_phase_1.md  tutorial_phase_2.md  tutorial_phase_3.md  tutorial_phase_4.md  tutorial_phase_5.md
prompts/: phase1_delivery_mechanic.md  phase2_supervisor.md  phase3_llm_agents.md  phase4_observability.md  phase5_extensibility.md
tests/: test_benchmarks.py  test_core.py  test_observability.py
